<resources>
    <string name="app_name">MangIA</string>
    <string name="pbSettlet"><b>Powered By</b> Settlet™</string>
    <string name="cntBtn">Continuar</string>
    <string name="pass">Contraseña</string>
    <string name="rPass">Repita la Contraseña</string>
    <string name="mail">E-Mail</string>
    <string name="tel">Teléfono</string>
    <string name="userName">Nombre de Usuario</string>
    <string name="nName">Apodo</string>
    <string name="pLogin">¿Ya tienes cuenta? <u>Click aquí.</u></string>
    <string name="LoginTitle">Iniciar Sesión</string>
    <string name="country">País</string>
    <string name="region">Región</string>
    <string name="dateBirth">Fecha de Nacimiento</string>
    <string name="termsConditions">Para completar tu Registro, debes aceptar nuestros <b>Términos de uso</b> y el procesamiento, tratamiento y transferencia de tus datos personales conforme a lo dispuesto en las <b>Políticas de Privacidad</b></string>
    <string name="cancel">Cancelar</string>}
    <string name="fPass">¿Olvidaste tu contraseña? <u>Click aquí.</u></string>
    <string name="iSuggestion"><u>¿No encuentras tu ingrediente? Sugiérelo</u></string>
    <string name="logo">Logo MangIA</string>
    <string name="google">Iniciar con Google</string>
    <string name="facebook">Iniciar con Facebook</string>
    <string name="twitter">Iniciar con Twitter</string>
    <string name="register"><u>Conviertete en Chef</u></string>
    <string name="registerTitle">Registro</string>
    <string name="rememberPass">Recuerdame</string>
    <string name="exNumber">1132150923</string>
    <string name="exArea">+54</string>
    <string name="verifyMail">Para completar su registro, por favor, verifique su correo electronico y luego haga click en continuar</string>
    <string name="vMailTitle">Verificacion de E-Mail</string>
    <string name="FPassTitle">Recuperar contraseña</string>
    <string name="descFPass">Ingresa tu E-Mail. A continuación se enviará un correo electrónico con los pasos para la recuperación.</string>
    <string name="send">Enviar</string>
    <string name="codeVerPhone">Codigo de Verificación</string>
    <string name="vPhoneTitle">Verificación de Celular</string>
    <string name="title_activity_slide_bar">SlideBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Mi Perfil</string>
    <string name="notif">Notificaciones</string>
    <string name="fav">Mis Favoritos</string>
    <string name="search">Buscar</string>
    <string name="scan">Escanear Ingredientes</string>
    <string name="config">Configuración</string>
    <string name="eProfile">Editar Perfil</string>
    <string name="done">Hecho</string>
    <string name="bio">Biografía</string>
    <string name="default_web_client_ids">1097311336191-cnv4t48qrrbd20p5i3qlonlsvvt2e7vh.apps.googleusercontent.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_notification">Notificaciones</string>
    <string name="menu_favorite">Favoritos</string>
    <string name="menu_configuration">Configuración</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cSesion">Cerrar Sesión</string>
    <string name="follow">Seguidos</string>
    <string name="followers">Seguidores</string>
    <string name="mRecipe">Crear Receta</string>
    <string name="nRecipe">Nueva Receta</string>
    <string name="aIngredient">Agregar Ingredientes</string>
    <string name="stepByStep">Paso a paso</string>
    <string name="sIngredient">Buscar Ingredientes</string>
    <string name="sRecipe">Buscar Recetas</string>
    <string name="sUser">Buscar Usuarios</string>

    <string name="plusAdd">+ Añadir…</string>
    <string name="ingredient">Ingrediente</string>
    <string name="plusAddStep">+ Agregar paso…</string>
    <string name="oImage"><u>Añadir imagen del paso (Opcional)</u></string>
    <string name="Follow">Seguir</string>
    <string name="Following">Siguiendo</string>
    <string name="Filters">Filtros</string>
    <string name="complexity">Slider of Recipe Complexity</string>
    <string name="preparation">Slider of Recipe Preparation Time</string>
    <string name="readMore">Leer más…</string>
    <string name="readLess">Leer menos…</string>
    <string name="valorations">Valoraciones</string>
    <string name="answer">Responder</string>
    <string name="comments">Comentarios</string>
    <string name="addComments">Agrega un comentario…</string>
    <string name="post">Publicar</string>
    <string name="like">Me Gusta</string>
    <string name="recipe">Receta</string>
    <string name="ingredients">Ingredientes</string>
    <string name="welcomeMangIA">Bienvenido a MangIA</string>
    <string name="sRecipes">Explora recetas, personas…</string>


    <string name="facebook_app_id">1509587142805147</string>
    <string name="fb_login_protocol_scheme">fb1509587142805147</string>
    <string name="facebook_client_token">73be65733243a1126c369046b83930f7</string>

    <string name="notHaveAccount">¿No tienes cuenta? <u>Conviértete en chef aquí.</u></string>
    <string name="filterBy">Filtrar por:</string>
    <string name="cleanFilter">Limpiar filtros</string>
    <string name="orderBy">Ordenar por:</string>
    <string name="save">Guardar</string>
    <string name="writeMessage">Escribir mensaje…</string>
    <string name="eliminatedMessage">🚫 𝐸𝑠𝑡𝑒 𝑚𝑒𝑛𝑠𝑎𝑗𝑒 ℎ𝑎 𝑠𝑖𝑑𝑜 𝑒𝑙𝑖𝑚𝑖𝑛𝑎𝑑𝑜 𝑝𝑎𝑟𝑎 𝑡𝑜𝑑𝑜𝑠.</string>
    <string name="imageSent">🖼 Imagen</string>
    <string name="sChat">Buscar chat, personas…</string>


    <string-array name="continents">
        <item>Africa</item>
        <item>Asia</item>
        <item>America del Norte o Central</item>
        <item>America del Sur</item>
        <item>Europa</item>
        <item>Oceania</item>
    </string-array>
    <string-array name="hojas">
        <item>Atd</item>
        <item>Gr</item>
        <item>Kg</item>
        <item>Hjs</item>
        <item>Un</item>
    </string-array>
    <string-array name="liquidos">
        <item>Lts</item>
        <item>Ml</item>
        <item>Cm³</item>
        <item>Taza</item>
        <item>C/s</item>
        <item>C/c</item>
    </string-array>
    <string-array name="polvos">
        <item>Gr</item>
        <item>Kg</item>
        <item>C/s</item>
        <item>C/c</item>
        <item>Tz</item>
    </string-array>
    <string-array name="legumbres_semillas">
        <item>Tz</item>
        <item>Gr</item>
        <item>Kg</item>
    </string-array>
    <string-array name="unidad">
        <item>Un</item>
    </string-array>
    <string-array name="timeFormat">
        <item>Minutos</item>
        <item>Horas</item>
        <item>Días</item>
        <item>Meses</item>
    </string-array>
</resources>