<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".VerifyPhoneActivity">

    <ImageButton
        android:id="@+id/imbBackVP"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primaryColor"
        android:contentDescription="@string/cancel"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btnback" />

    <TextView
        android:id="@+id/txvTitleVP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/vPhoneTitle"
        android:textColor="@color/secundaryColor"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvLogoVP" />

    <EditText
        android:id="@+id/txpPinVP"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@color/TertiaryColor"
        android:ems="10"
        android:fontFamily="@font/opensans"
        android:gravity="center"
        android:hint="@string/codeVerPhone"
        android:inputType="textPersonName"
        android:textColor="@color/quaternaryColor"
        android:textColorHint="@color/transQuaternaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvPhoneBlockedVP" />


    <Button
        android:id="@+id/btnContinueVP"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/opensansextrabold"
        android:text="@string/cntBtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/secundaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txpPinVP" />

    <ImageView
        android:id="@+id/imvPBSettletVP"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pbSettlet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pbsettlet" />

    <ImageView
        android:id="@+id/imvLogoVP"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imvPhoneBlockedVP"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTitleVP"
        app:srcCompat="@drawable/blockedphone" />


</androidx.constraintlayout.widget.ConstraintLayout>