<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".CheckMailActivity">

    <ImageView
        android:id="@+id/imvBackgroundACM"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bglogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imbBackVM"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primaryColor"
        android:contentDescription="@string/cancel"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btnback" />

    <Button
        android:id="@+id/btnContinueVM"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/manjaribold"
        android:text="@string/cntBtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/secundaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTextCenterVM" />

    <TextView
        android:id="@+id/txvTextCenterVM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/manjariregular"
        android:gravity="center_horizontal"
        android:text="@string/verifyMail"
        android:textColor="@color/quaternaryColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTitleVM" />

    <TextView
        android:id="@+id/txvTitleVM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manjaribold"
        android:text="@string/vMailTitle"
        android:textColor="@color/quaternaryColor"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="300dp" />

</androidx.constraintlayout.widget.ConstraintLayout>