<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imvBackgroundAL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/bglogin"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imvLogoL"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_nobg"
        tools:ignore="ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="50dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txvForgotPassL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manjariregular"
                android:text="@string/fPass"
                android:textColor="@color/quaternaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnContinueL" />

            <EditText
                android:id="@+id/txpPassL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/transSecundaryColor"
                android:ems="10"
                android:fontFamily="@font/manjarithin"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/secundaryColor"
                android:textColorHint="@color/transSecundaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txpMailL" />

            <EditText
                android:id="@+id/txpMailL"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/transSecundaryColor"
                android:ems="10"
                android:fontFamily="@font/manjarithin"
                android:hint="@string/mail"
                android:inputType="textPersonName"
                android:textColor="@color/secundaryColor"
                android:textColorHint="@color/transSecundaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvLoginL" />

            <Button
                android:id="@+id/btnContinueL"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/manjaribold"
                android:paddingBottom="0dp"
                android:text="@string/cntBtn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/secundaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txpPassL" />

            <ImageButton
                android:id="@+id/imbFacebookL"
                style="@android:style/Widget.DeviceDefault.ImageButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="-100dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/primaryColor"
                android:contentDescription="@string/facebook"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/txvLoginL2"
                app:layout_constraintStart_toEndOf="@+id/txvForgotPassL"
                app:layout_constraintTop_toBottomOf="@+id/txvForgotPassL"
                app:srcCompat="@drawable/facebook" />

            <ImageButton
                android:id="@+id/imbGoogleL"
                style="@android:style/Widget.DeviceDefault.ImageButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="-100dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/primaryColor"
                android:contentDescription="@string/google"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/txvLoginL2"
                app:layout_constraintEnd_toStartOf="@+id/txvForgotPassL"
                app:layout_constraintTop_toBottomOf="@+id/txvForgotPassL"
                app:srcCompat="@drawable/google" />

            <TextView
                android:id="@+id/txvLoginL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/manjaribold"
                android:text="@string/welcomeMangIA"
                android:textColor="@color/secundaryDarkColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txvLoginL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manjariregular"
                android:text="@string/pbSettlet"
                android:textColor="#20681A"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imvPassVisible"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="7dp"
                app:layout_constraintBottom_toBottomOf="@+id/txpPassL"
                app:layout_constraintEnd_toEndOf="@+id/txpPassL"
                app:layout_constraintTop_toTopOf="@+id/txpPassL"
                app:srcCompat="@drawable/ic_viewpass_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>